chore: merge workflow repositories into scenario repository
