# apps/credential-showcase-api-server/src/database/schema/index.ts
@@ -19,3 +19,8 @@ export * from './revocationInfo'
 export * from './persona'
 export * from './workflowsToPersonas'
 export * from './ariesProofRequest'
+export * from './showcase'
+export * from './showcasesToCredentialDefinitions'
+export * from './showcasesToPersonas'
+export * from './showcaseStatus'
+export * from './showcasesToScenarios'
