# packages/credential-showcase-openapi/openapi/openapi.yaml
@@ -2617,7 +2617,7 @@ components:
         - status
         - scenarios
         - personas
-        - credentials
+        - credentialsDefinitions
         - hidden
       properties:
         id:
@@ -2633,10 +2633,7 @@ components:
           description: Description of the showcase
           example: Collection of credential usage scenarios
         status:
-          type: string
-          enum: [pending, active, archived]
-          description: Current status of the showcase
-          example: pending
+          $ref: '#/components/schemas/ShowcaseStatus'
         hidden:
           type: boolean
           description: Whether the showcase is hidden from public view
@@ -2646,7 +2643,7 @@ components:
           description: List of scenarios in this showcase
           items:
             $ref: '#/components/schemas/Workflow'
-        credentials:
+        credentialsDefinitions:
           type: array
           description: List of credential definitions used in this showcase
           items:
@@ -2676,7 +2673,7 @@ components:
         - status
         - scenarios
         - personas
-        - credentials
+        - credentialsDefinitions
         - hidden
       properties:
         name:
@@ -2688,10 +2685,7 @@ components:
           description: Description of the showcase
           example: Collection of credential usage scenarios
         status:
-          type: string
-          enum: [pending, active, archived]
-          description: Current status of the showcase
-          example: pending
+          $ref: '#/components/schemas/ShowcaseStatus'
         hidden:
           type: boolean
           description: Whether the showcase is hidden from public view
@@ -2702,7 +2696,7 @@ components:
           items:
             type: string
             example: 123e4567-e89b-12d3-a456-426614174469
-        credentials:
+        credentialsDefinitions:
           type: array
           description: List of credential definitions used in this showcase
           items:
@@ -2714,6 +2708,14 @@ components:
           items:
             type: string
             example: 123e4567-e89b-12d3-a456-426614174469
+
+    ShowcaseStatus:
+      type: string
+      enum:
+          - PENDING
+          - ACTIVE
+          - ARCHIVED
+      description: Types of supported credentials
 
     # Scenario:
     #   type: object
